Mettre a jour le fichier CalendrierAgricole.jsx afin d'afficher les sous Catégories en multilingues

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -98,7 +98,7 @@
     "ail": "Garlic",
     "oignons": "Onions",
     "salades": "Salads",
-    "grenadier": "Pomegranate",
+    "grenadier": "Pomegranate tree",
     "grenades": "Pomegranates",
     "figue_barbarie": "Prickly pear",
     "pois": "Peas"
