--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -98,7 +98,7 @@
     "ail": "Ajo",
     "oignons": "Cebollas",
     "salades": "Ensaladas",
-    "grenadier": "Granada",
+    "grenadier": "Granado",
     "grenades": "Granadas",
     "figue_barbarie": "Higo chumbo",
     "pois": "Guisantes"
