Utilser Zoom sur la carte pour afficher les zones agricoles par région

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -37,18 +37,38 @@
     "subtropicale": "منطقة شبه مدارية"
   },
 
-  "countries": {
-    "ma": "المغرب",
-    "fr": "فرنسا",
-    "us": "الولايات المتحدة",
-    "br": "البرازيل",
-    "in": "الهند",
-    "au": "أستراليا",
-    "eg": "مصر",
-    "cn": "الصين",
-    "ng": "نيجيريا",
-    "ar": "الأرجنتين"
-  },
+"countries": {
+  "ma": "المغرب",
+  "fr": "فرنسا",
+  "us": "الولايات المتحدة",
+  "br": "البرازيل",
+  "in": "الهند",
+  "au": "أستراليا",
+  "eg": "مصر",
+  "cn": "الصين",
+  "ng": "نيجيريا",
+  "ar": "الأرجنتين",
+  "za": "جنوب أفريقيا",
+  "et": "إثيوبيا",
+  "ke": "كينيا",
+  "it": "إيطاليا",
+  "es": "إسبانيا",
+  "de": "ألمانيا",
+  "gb": "المملكة المتحدة",
+  "ru": "روسيا",
+  "gr": "اليونان",
+  "tr": "تركيا",
+  "mx": "المكسيك",
+  "ca": "كندا",
+  "cl": "تشيلي",
+  "id": "إندونيسيا",
+  "jp": "اليابان",
+  "sa": "المملكة العربية السعودية",
+  "pk": "باكستان",
+  "nz": "نيوزيلندا",
+  "ir": "إيران",
+  "dz": "الجزائر"
+},
   
   "culturesTitle": "محاصيل لـ",
   "filterByCategory": "تصفية حسب الفئة",
