--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -37,19 +37,38 @@
     "subtropicale": "Subtropical zone"
   },
 
-  "countries": {
-    "ma": "Morocco",
-    "fr": "France",
-    "us": "United States",
-    "br": "Brazil",
-    "in": "India",
-    "au": "Australia",
-    "eg": "Egypt",
-    "cn": "China",
-    "ng": "Nigeria",
-    "ar": "Argentina"
-  },
-  
+ "countries": {
+  "ma": "Morocco",
+  "fr": "France",
+  "us": "United States",
+  "br": "Brazil",
+  "in": "India",
+  "au": "Australia",
+  "eg": "Egypt",
+  "cn": "China",
+  "ng": "Nigeria",
+  "ar": "Argentina",
+  "za": "South Africa",
+  "et": "Ethiopia",
+  "ke": "Kenya",
+  "it": "Italy",
+  "es": "Spain",
+  "de": "Germany",
+  "gb": "United Kingdom",
+  "ru": "Russia",
+  "gr": "Greece",
+  "tr": "Turkey",
+  "mx": "Mexico",
+  "ca": "Canada",
+  "cl": "Chile",
+  "id": "Indonesia",
+  "jp": "Japan",
+  "sa": "Saudi Arabia",
+  "pk": "Pakistan",
+  "nz": "New Zealand",
+  "ir": "Iran",
+  "dz": "Algeria"
+},
   "culturesTitle": "Crops for",
   "filterByCategory": "Filter by category",
   "noCulture": "No crops for this category",
