--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -37,18 +37,38 @@
     "subtropicale": "Zona subtropical"
   },
 
-  "countries": {
-    "ma": "Marruecos",
-    "fr": "Francia",
-    "us": "Estados Unidos",
-    "br": "Brasil",
-    "in": "India",
-    "au": "Australia",
-    "eg": "Egipto",
-    "cn": "China",
-    "ng": "Nigeria",
-    "ar": "Argentina"
-  },
+ "countries": {
+  "ma": "Marruecos",
+  "fr": "Francia",
+  "us": "Estados Unidos",
+  "br": "Brasil",
+  "in": "India",
+  "au": "Australia",
+  "eg": "Egipto",
+  "cn": "China",
+  "ng": "Nigeria",
+  "ar": "Argentina",
+  "za": "Sudáfrica",
+  "et": "Etiopía",
+  "ke": "Kenia",
+  "it": "Italia",
+  "es": "España",
+  "de": "Alemania",
+  "gb": "Reino Unido",
+  "ru": "Rusia",
+  "gr": "Grecia",
+  "tr": "Turquía",
+  "mx": "México",
+  "ca": "Canadá",
+  "cl": "Chile",
+  "id": "Indonesia",
+  "jp": "Japón",
+  "sa": "Arabia Saudita",
+  "pk": "Pakistán",
+  "nz": "Nueva Zelanda",
+  "ir": "Irán",
+  "dz": "Argelia"
+},
   
   "culturesTitle": "Cultivos para",
   "filterByCategory": "Filtrar por categoría",
