--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -37,18 +37,38 @@
   "subtropicale": "Zone subtropicale"
 },
 
-  "countries": {
-    "ma": "Maroc",
-    "fr": "France",
-    "us": "États-Unis",
-    "br": "Brésil",
-    "in": "Inde",
-    "au": "Australie",
-    "eg": "Égypte",
-    "cn": "Chine",
-    "ng": "Nigeria",
-    "ar": "Argentine"
-  },
+"countries": {
+  "ma": "Maroc",
+  "fr": "France",
+  "us": "États-Unis",
+  "br": "Brésil",
+  "in": "Inde",
+  "au": "Australie",
+  "eg": "Égypte",
+  "cn": "Chine",
+  "ng": "Nigeria",
+  "ar": "Argentine",
+  "za": "Afrique du Sud",
+  "et": "Éthiopie",
+  "ke": "Kenya",
+  "it": "Italie",
+  "es": "Espagne",
+  "de": "Allemagne",
+  "gb": "Royaume-Uni",
+  "ru": "Russie",
+  "gr": "Grèce",
+  "tr": "Turquie",
+  "mx": "Mexique",
+  "ca": "Canada",
+  "cl": "Chili",
+  "id": "Indonésie",
+  "jp": "Japon",
+  "sa": "Arabie Saoudite",
+  "pk": "Pakistan",
+  "nz": "Nouvelle-Zélande",
+  "ir": "Iran",
+  "dz": "Algérie"
+},
   
   "culturesTitle": "Cultures pour",
   "filterByCategory": "Filtrer par catégorie",
